# MFA_estimator

./: .gitignore  .gitmodules  MFA_estimator.py  README.md  pyproject.toml
examples/: mfa_estimator_example.py
src/mfa_estimator/: __init__.py  estimator.py
tests/: test_estimator.py  test_examples.py  test_import.py
